Implement Funktion reduseDomains and revise - Final tests necessary